export interface Property {
    id: number,
    address_id?: number,
    property_manager_id: number,
    date_updated: Date,
    name: string,
    description: string,
    date_created: Date,
    version: number
}