@startuml

entity Address {
    +id: Integer <<PK>>
    --
    street: String
    city: String
    state: String
    postal_code: String
    country: String
    description: String
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity User {
    +id: Integer <<PK>>
    --
    email: String
    password: String
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity PropertyManager {
    +id: Integer <<PK>>
    --
    name: String
    email: String
    phone_number: String
    address_id: Integer <<FK>>
    user_id: Integer <<FK>>
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity Tenant {
    +id: Integer <<PK>>
    --
    firstname: String
    surname: String
    description: String
    date_of_birth: DateTime
    email: String
    phone: String
    address_id: Integer <<FK>>
    user_id: Integer <<FK>>
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity Guarantor {
    +id: Integer <<PK>>
    --
    firstname: String
    surname: String
    description: String
    date_of_birth: DateTime
    email: String
    phone: String
    address_id: Integer <<FK>>
    tenant_id: Integer <<FK>>
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity Property {
    +id: Integer <<PK>>
    --
    name: String
    description: String
    address_id: Integer <<FK>>
    property_manager_id: Integer <<FK>>
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity Inventory {
    +id: Integer <<PK>>
    --
    name: String
    description: String
    property_id: Integer <<FK>>
    rooms: JSON
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

entity Rental {
    +id: Integer <<PK>>
    --
    tenant_id: Integer <<FK>>
    property_id: Integer <<FK>>
    description: String
    name: String
    start_date: Date
    end_date: Date
    rent_amount: Float
    deposit_amount: Float
    date_created: DateTime
    date_updated: DateTime
    version: Integer
}

Address ||--o{ PropertyManager : "address_id"
Address ||--o{ Tenant : "address_id"
Address ||--o{ Guarantor : "address_id"
Address ||--o{ Property : "address_id"

User ||--o{ PropertyManager : "user_id"
User ||--o{ Tenant : "user_id"

PropertyManager ||--o{ Property : "property_manager_id"

Tenant ||--o{ Guarantor : "tenant_id"
Tenant ||--o{ Rental : "tenant_id"

Property ||--o{ Inventory : "property_id"
Property ||--o{ Rental : "property_id"

@enduml
